--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <h2>IP Address Tracker</h2>
             <div class="search_cont">
                 <input class="search" type="text" placeholder="Search for any IP address or domain">
-                <button class="btn"></button>
+                <div class="btn"></div>
             </div>
             <div class="banner">
                 <div class="head_cont">
